# pichat

./: CMakeLists.txt  README.md  project-readme.md  vcpkg.jason
Pichat/: CMakeLists.txt
Pichat/buildcd/: CMakeCache.txt
include/: Pichat.h
include/cli/: CLIManager.h
include/common/: Message.h
include/config/: ConfigManager.h
include/gui/: MainWindow.h  SettingsDialog.h
include/utils/: DeepSeekAPI.h  ErrorHandler.h  NewErrorHandler.h  PythonUtils.h
include/voice/: CommandProcessor.h  SpeechRecognizer.h  TextToSpeech.h  VoiceManager.h
resources/icons/: resources.qrc
src/: CMakeLists.txt  main.cpp  main_cli.cpp  main_gui_test.cpp  resources.qrc
src/cli/: CLIManager.cpp
src/config/: ConfigManager.cpp
src/gui/: MainWindow.cpp  MainWindow.ui  SettingsDialog.cpp  SettingsDialog.ui
src/utils/: DeepSeekAPI.cpp  DeepSeekChatAPI.cpp  ErrorHandler.cpp  IconGenerator.cpp  PythonUtils.cpp
src/voice/: CommandProcessor.cpp  SpeechRecognizer.cpp  TextToSpeech.cpp  VoiceManager.cpp
